<resources>
    <string name="app_name" translatable="false">DataCrypt</string>
    <string name="password">Password</string>
    <string name="welcome">WELCOME</string>
    <string name="logintip">Please enter your password.</string>
    <string name="login">LOG IN</string>
    <string name="title_activity_explorer">Explorer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">DataCrypt</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">File explorer</string>
    <string name="menu_gallery">Password vault</string>
    <string name="menu_slideshow">Key exchange</string>
    <string name="nav_header_subtitle">Keep your data secure!</string>
    <string name="menu_explorer">File explorer</string>
    <string name="menu_datavault">Password vault</string>
    <string name="menu_keyexchange">Google Drive</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="searchServiceErr">Please enter service name to search</string>
    <string name="enterServiceName">Enter service name here...</string>
    <string name="categoryName">Enter category name</string>
    <string name="create">Create</string>
    <string name="catExists">Category already exists</string>
    <string name="enterCatName">Please enter category name</string>
    <string name="cancel">Cancel</string>
    <string name="failedDatabase">Failed to read database(perhaps your password is wrong?).</string>
    <string name="intStorage">Internal Storage</string>
    <string name="selectFiles">Please select files/folders</string>
    <string name="warning">Warning</string>
    <string name="goingToDelete">You are going to delete these files. Do you want to proceed?</string>
    <string name="deleting">Deleting files...</string>
    <string name="bckgnd">Background</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="encFiles">Encrypt file(s)</string>
    <string name="decFiles">Decrypt file(s)</string>
    <string name="choose">Choose action</string>
    <string name="encExists">One or more encrypted files already exist. Do you want to delete them or not encrypt files?</string>
    <string name="delete">Delete</string>
    <string name="encStarted">Encryption started!</string>
    <string name="decExists">One or more decrypted files already exist. Do you want to delete them or not decrypt files?</string>
    <string name="decStarted">Decryption started!</string>
    <string name="privateFolder">Private Folder</string>
    <string name="swPrivate">Switched to Private Folder</string>
    <string name="extStorage">External Storage</string>
    <string name="swExt">Switched to External Storage</string>
    <string name="swInt">Switched to Internal Storage</string>
    <string name="pressToExit">Press one more time to exit</string>
    <string name="createFolder">Create new folder</string>
    <string name="enterNameErr">Please enter folder name</string>
    <string name="enterValidNameErr">Please enter valid name</string>
    <string name="folderExistsErr">File/folder with same name already exists</string>
    <string name="searching">Searching...</string>
    <string name="noResults">No results</string>
    <string name="enterFileNameErr">Please enter file name</string>
    <string name="enterFileNameSearch">Enter file name here...</string>
    <string name="copyTo">Copy to...</string>
    <string name="moveTo">Move to...</string>
    <string name="preparing">Preparing...</string>
    <string name="folder">Folder</string>
    <string name="alreadyExistsSubStr">already exists in</string>
    <string name="replaceFolderEnding">. Do you want to merge folder contents, rename or skip it?</string>
    <string name="merge">Merge</string>
    <string name="skip">Skip</string>
    <string name="rename">Rename</string>
    <string name="applyToAllFiles">Apply to all files</string>
    <string name="file">File</string>
    <string name="replaceFileEnding">. Do you want to replace, rename or skip it?</string>
    <string name="replace">Replace</string>
    <string name="bytes">B free</string>
    <string name="kbytes">KB free</string>
    <string name="mbytes">MB free</string>
    <string name="gbytes">GB free</string>
    <string name="tbytes">TB free</string>
    <string name="noInternet">No internet connection</string>
    <string name="copied">Copied to clipboard!</string>
    <string name="smthWentWrong">Something went wrong...</string>
    <string name="wait">Please wait...</string>
    <string name="enterKeyForEnc">Please enter key for encryption</string>
    <string name="enterTextToEnc">Please enter text to encrypt</string>
    <string name="ciphertext">Ciphertext</string>
    <string name="plaintext">Plain text</string>
    <string name="decryptMessage">Decrypt</string>
    <string name="wrongKey">Wrong key or bad ciphertext</string>
    <string name="enterKeyForDec">Please enter key for decryption</string>
    <string name="enterTextToDec">Please enter text for decryption</string>
    <string name="hashOutput">Hash output</string>
    <string name="calcHash">Calculate hash</string>
    <string name="enterText">Please enter text</string>
    <string name="encDec">Encrypting/decrypting</string>
    <string name="channelDesc">Show notifications when encrypting/decrypting files</string>
    <string name="serviceRunning">Encryptor service is running</string>
    <string name="encrypting">Encrypting...</string>
    <string name="serviceErrorEnc">Something went wrong while encrypting</string>
    <string name="serviceEncSuccess">File(s) have been successfully encrypted!</string>
    <string name="share">Share</string>
    <string name="errors">Errors:</string>
    <string name="decrypting">Decrypting...</string>
    <string name="serviceDecryptionError">Something went wrong while decrypting</string>
    <string name="serviceDecSuccess">File(s) have been successfully decrypted!</string>
    <string name="uploadingTo">Uploading files to Google Drive...</string>
    <string name="serviceGEncSuccess">Encrypted files have been successfully uploaded to GDrive!</string>
    <string name="serviceGEncError">Something went wrong while uploading...</string>
    <string name="serviceDownloading">Downloading files from G Drive...</string>
    <string name="serviceGDecSuccess">File(s) have been successfully downloaded and decrypted!</string>
    <string name="serviceGDelete">Deleting file(s) from Google drive...</string>
    <string name="serviceGDeleteSuccess">File(s) have been successfully deleted!</string>
    <string name="serviceGDeleteError">Something went wrong while deleting file(s)</string>
    <string name="serviceDelete">Deleting file(s)...</string>
    <string name="serviceCopy">Copying file(s)...</string>
    <string name="serviceMove">Moving file(s)...</string>
    <string name="serviceMoving">Moving</string>
    <string name="serviceCopying">Copying</string>
    <string name="serviceFiles">files</string>
    <string name="serviceMoveSuccess">Successfully moved</string>
    <string name="serviceCopySuccess">Successfully copied</string>
    <string name="renameFileFolder">Rename file/folder</string>
    <string name="enterAdapterNameErr">Please enter name</string>
    <string name="enterNewName">Please enter a NEW name</string>
    <string name="accessDeniedDelete">Access denied(file/folder is being deleted)</string>
    <string name="accessDenied">Access denied</string>
    <string name="decryptFile">Decrypt file</string>
    <string name="encryptFile">Encrypt file</string>
    <string name="openFile">Open file</string>
    <string name="encFileExists">Encrypted file already exists. Do you want to replace it?</string>
    <string name="decFileExists">Decrypted file already exists. Do you want to replace it?</string>
    <string name="failedToOpenFile">Failed to open file</string>
    <string name="b">B</string>
    <string name="kb">KB</string>
    <string name="mb">MB</string>
    <string name="gb">GB</string>
    <string name="tb">TB</string>
    <string name="calculating">Calculating...</string>
    <string name="items">items</string>
    <string name="confirmAction">Confirm action</string>
    <string name="uploadSelectorConfirmText">Do you want to encrypt and upload this file?</string>
    <string name="downloadAndDecryptQ">Do you really want to download and decrypt</string>
    <string name="rootErr">Sorry, this is the root</string>
    <string name="exit">Exit</string>
    <string name="rootFolder">Root folder</string>
    <string name="downloadDecryptFiles">Do you want to download and decrypt selected file(s)?</string>
    <string name="failedToCreateG">Failed to create folder</string>
    <string name="encryptMsg">Encrypt</string>
    <string name="decryptMsg">Decrypt</string>
    <string name="hashMsg">Hash</string>
    <string name="wrongPass">Wrong password!</string>
    <string name="wentWrongPass">Oops, something went wrong! Try again.</string>
    <string name="cannotUseWhileChanging">Cannot use app while changing password</string>
    <string name="selectIcon">Select icon</string>
    <string name="discardEntry">Discard entry?</string>
    <string name="discardEntryText">You have some unsaved changes. Do you want to discard them?</string>
    <string name="failedToAddEntry">Failed to save entry.</string>
    <string name="fillDataErr">Please fill data</string>
    <string name="invalidURLErr">Enter a valid URL, please.</string>
    <string name="strongPassword">Strong password</string>
    <string name="mediumPassword">Medium password</string>
    <string name="weakPassword">Weak password</string>
    <string name="passLength">Password length</string>
    <string name="cont">Continue</string>
    <string name="encrypt">Encrypt</string>
    <string name="darkTheme">Dark Theme</string>
    <string name="deleteAfter1">Delete original files after encryption</string>
    <string name="deleteAfter2">Delete encrypted files after decryption</string>
    <string name="previews">Show image previews</string>
    <string name="showLogins">Show logins in password vault</string>
    <string name="showHidden">Show hidden files/folders</string>
    <string name="changePass">Change password</string>
    <string name="backupRestore">Backup/restore passwords</string>
    <string name="settings">Settings</string>
    <string name="copy">Copy</string>
    <string name="move">Move</string>
    <string name="grantBattery">Disable consumption optimization</string>
    <string name="grantStorage">GRANT STORAGE PERMISSION</string>
    <string name="confirmPass">Confirm password</string>
    <string name="welcomeToEncryptor">Welcome to DataCrypt!</string>
    <string name="welcomeToEncryptorText">DataCrypt is an application that helps you keep your important and sensitive data safe. You can encrypt and decrypt files, safely store all your passwords, save files in a secure folder or cloud encrypted with this application. There is also a full-fledged file manager.</string>
    <string name="next">Next</string>
    <string name="enterPassAuth">Please enter your password to use autofill</string>
    <string name="notesMenu">Notes</string>
    <string name="aboutApp">DataCrypt is an application that helps you keep your important and sensitive data safe. You can encrypt and decrypt files, safely store all your passwords, save files in a secure folder or cloud encrypted with this application. There is also a full-fledged file manager. This application is a project of a student of the Samsung IT School.</string>
    <string name="version">Version:</string>
    <string name="sendFeedback">Send feedback</string>
</resources>