<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_deleteFiles"
        android:icon="@android:drawable/ic_delete"
        android:title="@string/delete" />
    <item
        android:id="@+id/action_shareFiles"
        android:icon="?attr/actionModeShareDrawable"
        android:title="@string/share" />
    <item
        android:id="@+id/action_encryptFiles"
        android:icon="@drawable/locked"
        android:title="@string/encrypt" />
    <item
        android:id="@+id/action_copyFiles"
        android:icon="?attr/actionModeCopyDrawable"
        android:title="@string/copy" />
    <item
        android:id="@+id/action_moveFiles"
        android:icon="?attr/actionModeCutDrawable"
        android:title="@string/move" />
</menu>