<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_explorer"
            android:icon="@drawable/filetemplate"
            android:title="@string/menu_explorer" />
        <item
            android:id="@+id/nav_datavault"
            android:icon="@drawable/managerkey"
            android:title="@string/menu_datavault" />
        <item
            android:id="@+id/nav_keyexchange"
            android:icon="@drawable/cloud"
            android:title="@string/menu_keyexchange" />
        <item
            android:id="@+id/nav_notes"
            android:icon="@drawable/ic_text"
            android:title="@string/notesMenu" />
        <item
            android:id="@+id/nav_messagecrypt"
            android:icon="@drawable/message"
            android:title="MessageCrypt" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/settings"
            android:title="@string/settings" />
    </group>
</menu>