<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsFragment">

    <ScrollView
        android:id="@+id/settingsView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/settingsLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Switch
                android:id="@+id/darkTheme"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:checked="false"
                android:fontFamily="@font/ubuntu"
                android:text="@string/darkTheme"
                android:textSize="18sp"
                tools:checked="false" />

            <Switch
                android:id="@+id/deleteAfter"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:fontFamily="@font/ubuntu"
                android:text="@string/deleteAfter1"
                android:textSize="18sp" />

            <Switch
                android:id="@+id/deleteAfter2"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:fontFamily="@font/ubuntu"
                android:lineSpacingExtra="2dp"
                android:text="@string/deleteAfter2"
                android:textSize="18sp" />

            <Switch
                android:id="@+id/previewSwitch"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:fontFamily="@font/ubuntu"
                android:text="@string/previews"
                android:textSize="18sp" />

            <Switch
                android:id="@+id/showLoginsSwitch"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:fontFamily="@font/ubuntu"
                android:text="@string/showLogins"
                android:textSize="18sp" />

            <Switch
                android:id="@+id/hiddenFilesSwitch"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:fontFamily="@font/ubuntu"
                android:text="@string/showHidden"
                android:textSize="18sp" />

            <Button
                android:id="@+id/changePassword"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:backgroundTint="#00FFFFFF"
                android:fontFamily="@font/ubuntu"
                android:gravity="start|center_vertical"
                android:letterSpacing="0"
                android:stateListAnimator="@null"
                android:text="@string/changePass"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <Button
                android:id="@+id/backUpDatabase"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:backgroundTint="#00FFFFFF"
                android:fontFamily="@font/ubuntu"
                android:gravity="start|center_vertical"
                android:letterSpacing="0"
                android:stateListAnimator="@null"
                android:text="@string/backupRestore"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18sp" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>