<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSurface"
    tools:context=".PasswordActivity">

  <ScrollView
      android:layout_width="match_parent"
      android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

      <androidx.constraintlayout.widget.ConstraintLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent">

        <ImageView
            android:id="@+id/backgroundAuth"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/bluerect"
            app:tint="?attr/colorPrimary" />

        <ImageView
            android:id="@+id/iconAuth"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toBottomOf="@+id/backgroundAuth"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/backgroundAuth"
            app:layout_constraintVertical_bias="0.35000002"
            app:srcCompat="@mipmap/icon_round" />

        <TextView
            android:id="@+id/textViewAuth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ubuntu_medium"
            android:text="@string/app_name"
            android:textColor="#CFD8DC"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/backgroundAuth"
            app:layout_constraintStart_toStartOf="@+id/backgroundAuth"
            app:layout_constraintTop_toBottomOf="@+id/iconAuth"
            app:layout_constraintVertical_bias="0.16000003" />

      </androidx.constraintlayout.widget.ConstraintLayout>

      <TextView
          android:id="@+id/welcomeAuth"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="22dp"
          android:fontFamily="@font/ubuntu_medium"
          android:shadowColor="#00FF0000"
          android:text="@string/welcome"
          android:textSize="35sp" />

      <TextView
          android:id="@+id/textView2Auth"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="22dp"
          android:fontFamily="@font/ubuntu"
          android:text="@string/enterPassAuth"
          android:textAlignment="center"
          android:textSize="24sp" />

      <com.google.android.material.textfield.TextInputLayout
          android:id="@+id/textInputLayout"
          android:layout_width="320dp"
          android:layout_height="wrap_content"
          android:layout_marginTop="22dp"
          android:hint="@string/password"
          app:passwordToggleEnabled="true"
          app:startIconDrawable="@android:drawable/ic_lock_lock">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ubuntu"
            android:inputType="text|textPassword" />

      </com.google.android.material.textfield.TextInputLayout>

      <Button
          android:id="@+id/button"
          style="@style/Widget.MaterialComponents.Button"
          android:layout_width="200dp"
          android:layout_height="wrap_content"
          android:layout_marginTop="22dp"
          android:elevation="100dp"
          android:fontFamily="@font/ubuntu_medium"
          android:onClick="checkForPermissionsPassword"
          android:text="@string/cont"
          android:textColor="?attr/colorSurface"
          android:textSize="18sp"
          app:cornerRadius="50dp" />

    </LinearLayout>
  </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>